--- a/Vue-todoList-newbranch/Vue-TodoList/package.json
+++ b/Vue-todoList-newbranch/Vue-TodoList/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist -r https://github.com/kirito2550/laji.git -b gh-pages"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
@@ -16,7 +18,8 @@
     "pubsub-js": "^1.9.4",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -27,6 +30,7 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "gh-pages": "^5.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
